samples/_failures_safe/1761706209_5c378e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed75f570.c: In function ‘main’:
./samples/SAFE/__tmp_ed75f570.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
